--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.1",
     "passport": "^0.6.0",
+    "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "typeorm": "^0.3.17"
   },
