Config: .env.sample 수정

--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,10 @@ SECRET_KEY = KEY
 
 # Server Port
 SERVER_PORT = PORT
+
+# Kakao
+KAKAO_CLIENT_ID=ID
+
+# Google
+GOOGLE_CLIENT_ID=ID
+GOOGLE_CLIENT_SECRET=SECRET
