--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
+    "passport-naver": "^1.0.6",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
